--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -15,4 +15,12 @@ While the global market is estimated to comprise 550 billion invoices annually, 
 Which methods exist for clustering large-scale multilingual corpora? Which combinations of feature-selection methods and clustering methods return the most valuable information?
 
 \section{Outline}
-\textcolor{red}{This should be written at the end since it's very prone to changes.}
+The introductory chapter briefly explains the motivation behind the thesis. Also, the current situation is assessed and research questions are presented. Lastly, it presents the structure of the thesis.
+
+The following chapter about objectives and criteria gives a detailes task description, and established criteria. The section \ref{research-model} the process model is explained, evaluated and adjusted.
+
+Chapter 3 gives a glossary of terms. Chapter 3 sheds light on the corporate environment with respect to the aspects of history, organization an technological aspects. 
+
+The following chapters follow the structure of the research model presented in \ref{research-model}.
+
+Chapter 4 explains the process of selecting a dataset. It presents fundamental types of projects and data sources. The chapter explains the sourcing of the used dataset.
