--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -6,17 +6,17 @@
 	% Alphabetisch selbst sortieren - nicht verwendete Kürzel rausnehmen!
 	\acro{AI}{Artificial Intelligence}
 	\acro{AI BUS}{SAP AI Business Services}
-	\acro{NLP}{Natural Language Processing}
+	\acro{BoW}{Bag of Words}
+	\acro{CBOW}{Continuous Bag of Words}
 	\acro{CRISP-DM}{Cross Industry Standard Process for Data Mining}
 	\acro{CoE}{Center of Excellence}
 	\acrodefplural{CoE}{Centers of Excellence}
-	\acro{BoW}{Bag of Words}
-	\acro{TF-IDF}{ferm frequency - inverse document frequency}	
-	\acro{CBOW}{Continuous Bag of Words}
+	\acro{GIL}{Global Interpreter Lock}
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
-	\acro{SEMMA}{Sample Explore Modify Model Assess}
-	\acro{GIL}{Global Interpreter Lock}
+	\acro{NLP}{Natural Language Processing}
 	\acro{NLTK}{Natural Language Toolkit}
+	\acro{SEMMA}{Sample Explore Modify Model Assess}
+	\acro{TF-IDF}{Term Frequency - Inverse Document Frequency}	
 
 \end{acronym}
