--- a/Inhalt/04_Inhalt/content_data_preparation.tex
+++ b/Inhalt/04_Inhalt/content_data_preparation.tex
@@ -1,10 +1,59 @@
 \chapter{Data Preparation}
 
-\section{Data preparation}
-
-
-	\subsection{Data processing and data wrangling}
+	\section{Data processing and data wrangling}
 	
+    The data is available as a local folder of size 5.12 GB, it contains 152,592 \ac{JSON} files. Each \ac{JSON} represents one invoice document. 
+	
+    Data preparation is the process of transforming the acquired dataset into a dataset which can be fed into learning algorithms and is cleaned of impurities in such a way, that the learning results are likely satisfactory. Impurities may be missing values, shifted columns, encoding errors or different data formats. 
+    Data preparation includes data wrangling, data cleaning, and feature extraction. What is left should be a uniform dataset, which is in a format that is understandable by the desired algorithms.
+    
+        \subsection{Alternatives}
+        The chosen dataset consists of files in \ac{JSON}. Several alternatives for storage and transforming the data exist. 
+        
+        \paragraph{Storage Location}
+        Within the constraints of the thesis, three options are available for data storage. Firstly, data can be stored locally on the available machine. The data is available without internet access, and the local machine has high read/write speeds. This option requires no additional learning, and is free of charge for the department. A multitude of libraries exist for accessing files on a local filesystem. A downside is the limited scalability in terms of storage capacity and read/write operations. Additionally, local storage makes the data only available to this specific machine.
+        
+        Storing data on a cloud filesharing system is easy to operate and free of usage-bound charges. The storage space is virtually unlimited. Accessing files on sharing platforms is feasible but tedious. The access can be shared within the company context, but everyone is subject to the limited accessibility. Using a files storage service could be of use for transferring data without a physical connection. Still, this is the only recommended use case in this context.
+        
+        The third option is storing the data using a specialized storage service, such as AWS S3. While the learning overhead is higher in the beginning, the scalability is a convincing argument. Billing is according to usage, but adequate because of the high connectivity with other cloud-based ML service offerings inside and outside of SAP.
+        
+        \begin{table}[ht]
+            \centering
+            \caption{Comparison of available Storage Options}
+            \begin{tabular}{c|lll}
+                \toprule
+                &\textbf{Local} & \textbf{Cloud Filesharing} & \textbf{Specialized Storage Services} \\
+                \midrule
+                \vspace{0.5cm}
+                Example     & \begin{tabular}[c]{@{}l@{}}2.6GHz \\ 512GB SSD\end{tabular} & Microsoft OneDrive                                                        & AWS S3                                                                                                 \\
+                \vspace{0.5cm}
+                Ease of use & high                                                        & high                                                                      & higher learning overhead                                                                               \\
+                \vspace{0.5cm}
+                Cost        & free of charge                                              & free of charge                                                            & \begin{tabular}[c]{@{}l@{}}billing according to \\ used storage space\end{tabular}                     \\
+                \vspace{0.5cm}
+                Scalability & limited                                                     & unlimited                                                                 & unlimited                                                                                              \\
+                \vspace{0.5cm}
+                Data access & local                                                       & \begin{tabular}[c]{@{}l@{}}limited remote \\ access capacity\end{tabular} & \begin{tabular}[c]{@{}l@{}}local, remote, high \\ connectivity to \\ ML service offerings\end{tabular}
+                
+            \end{tabular}
+            \label{tabelle:storage}
+        \end{table}
+        
+        \paragraph{Data Format}
+        The data is still available only in the from \ac{JSON} documents.
+        
+        - transforming json documents into dataframe rows
+        
+    \subsection{Theoretical Implementation}
+    For the data wrangling the invoices have to be read into memory and then processed into a reusable structure. Each document will be read into memory, then the necessary information will be extracted. All invoices will be combined into one data structure, which then is persisted for later use.
+
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[height=5cm]{Bilder/practical/entity_relationship.png}
+        \caption{Entity Relationship Diagram for Invoce Documents}
+        \label{fig:er}
+    \end{figure}
+
 	The data for an invoice and its contained items is stored in an array of objects. This is also shown in code example (\ref{code:JSONSchema}) of a shortened JSON Schema for one invoice. The array "annotations" contains objects. One object represents information such as the invoice date or the unit price. 
 	Information about invoice items have labels containing the prefix "lineItem". One invoice containing several items is represented by duplicate values of one label (in the example \ref{code:JSONInvoice} the label "lineItem.description.value"). Here, the order of the labels has to be retained during data wrangling to ensure not mixing up information about different invoice items.
 
@@ -17,6 +66,8 @@
 	lastline=23                 % Letzte Zeile welche ins LaTeX Dokument übernommen wird
 	]{Quellcode/invoice.json}
 	
+    \subsection{Practical Implementation}
+
 	The files are processed in python, using the library "json". Each file is opened, and decoded with python's build in json decoder. The hierarchy is traversed until the array "annotations" is reached. Now, the tuples of label and text are saved. This process is split up into invoice and item labels.
 	
 	The information on invoices is stored in a tabular data structure, a python pandas DataFrame. Worth mentioning is that some invoices contain more information than others. In this case, invoices are still appended into one table, but fields for non-existent values are left empty. The filename is the unique identificator for one invoice.
@@ -68,8 +119,12 @@
 	
 
 	
-	\subsection{Data cleaning}
-	
+	\section{Data cleaning}
+    - removing stopwords from several languages
+        
+    - removing numbers and interpunction
+    
+    - tokenization
 	The task of data cleaning was also completed using python scripts. The library \ac{NLTK}
 	
 	\begin{lstlisting}[language=sh]
@@ -77,10 +132,7 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
 >>>  ['of', 'special', 'baking', 'flour', 'type']
 	\end{lstlisting}
 	 
-
-	
-	
-	\subsection{Considerations of Space and Time Complexity}
+	\section{Considerations of Space and Time Complexity}
 	The dataset consists of over 150.000 invoices, and in those invoices, over 350.000 items are listed. 
 	With hardware-limitation in place, an optimized approach for storing and processing the data is required. 
 	Several considerations for speeding up processing time and reducing storage space can be made. 
@@ -94,81 +146,14 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
 		
 		\includegraphics[height=8cm]{Bilder/description_map.png}
 
-	\subsection{Feature Extraction and Feature Engineering}
-
-
-\subsection{Data processing and data wrangling}
-The data is available as a local folder of size 5.12 GB, it contains 152,592 \ac{JSON} files. Each \ac{JSON} represents one invoice document. 
-	
-For the data wrangling the invoices have to be read into memory and then processed into a reusable structure. Each document will be read into memory, then the necessary information will be extracted. All invoices will be combined into one data structure, which then is persisted for later use.
-
-Explain the structure of one invoice.
-Explain which data structures I want to use.
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics[height=5cm]{Bilder/practical/entity_relationship.png}
-	\caption{Entity Relationship Diagram for Invoce Documents}
-	\label{fig:er}
-\end{figure}
-
-
 Explain how I want to store the data. Explain the successive artifacts.
 
-    \section{Data preparation}
-
-    Data preparation is the process of transforming the acquired dataset into a dataset which can be fed into learning algorithms and is cleaned of impurities in such a way, that the learning results are likely satisfactory. Impurities may be missing values, shifted columns, encoding errors or different data formats. 
-    Data preparation includes data wrangling, data cleaning, and feature extraction. What is left should be a uniform dataset, which is in a format that is understandable by the desired algorithms.
-    
-        \subsection{Data processing and data wrangling}
-        The chosen dataset consists of files in \ac{JSON}. Several alternatives for storage and transforming the data exist. 
         
-        \paragraph{Storage}
-        Within the constraints of the thesis, three options are available for data storage. Firstly, data can be stored locally on the available machine. The data is available without internet access, and the local machine has high read/write speeds. This option requires no additional learning, and is free of charge for the department. A multitude of libraries exist for accessing files on a local filesystem. A downside is the limited scalability in terms of storage capacity and read/write operations. Additionally, local storage makes the data only available to this specific machine.
-        
-        Storing data on a cloud filesharing system is easy to operate and free of usage-bound charges. The storage space is virtually unlimited. Accessing files on sharing platforms is feasible but tedious. The access can be shared within the company context, but everyone is subject to the limited accessibility. Using a files storage service could be of use for transferring data without a physical connection. Still, this is the only recommended use case in this context.
-        
-        The third option is storing the data using a specialized storage service, such as AWS S3. While the learning overhead is higher in the beginning, the scalability is a convincing argument. Billing is according to usage, but adequate because of the high connectivity with other cloud-based ML service offerings inside and outside of SAP.
-        
-        \begin{table}[ht]
-            \centering
-            \caption{Comparison of available Storage Options}
-            \begin{tabular}{c|lll}
-                \toprule
-                &\textbf{Local} & \textbf{Cloud Filesharing} & \textbf{Specialized Storage Services} \\
-                \midrule
-                \vspace{0.5cm}
-                Example     & \begin{tabular}[c]{@{}l@{}}2.6GHz \\ 512GB SSD\end{tabular} & Microsoft OneDrive                                                        & AWS S3                                                                                                 \\
-                \vspace{0.5cm}
-                Ease of use & high                                                        & high                                                                      & higher learning overhead                                                                               \\
-                \vspace{0.5cm}
-                Cost        & free of charge                                              & free of charge                                                            & \begin{tabular}[c]{@{}l@{}}billing according to \\ used storage space\end{tabular}                     \\
-                \vspace{0.5cm}
-                Scalability & limited                                                     & unlimited                                                                 & unlimited                                                                                              \\
-                \vspace{0.5cm}
-                Data access & local                                                       & \begin{tabular}[c]{@{}l@{}}limited remote \\ access capacity\end{tabular} & \begin{tabular}[c]{@{}l@{}}local, remote, high \\ connectivity to \\ ML service offerings\end{tabular}
-                
-            \end{tabular}
-            \label{tabelle:storage}
-        \end{table}
-        
-        \paragraph{Transformation}
-        The data is still available only in the from \ac{JSON} documents.
-        
-        - transforming json documents into dataframe rows
-        
-        
-        \subsection{Data cleaning}
-        - removing stopwords from several languages
-        
-        - removing numbers and interpunction
-        
-        - tokenization
-        
-        \subsection{Feature Extraction and Feature Engineering}
+        \section{Feature Extraction and Feature Engineering}
         The majority of pupular ML algorithms require the input of scalar, vector or matrix data. A form of ML models, which work with textual input will be discussed later in this section. 
         But since many algorithms were not designed to work with textual data, a transformation is required before already existing algorithms can be applied. Several methods for representing text as mathematical object will be discussed in the following.
     
+            \subsection{Alternatives}
             \subsubsection{One-hot encoding}
             
     
@@ -282,4 +267,7 @@ Explain how I want to store the data. Explain the successive artifacts.
             
             Word2vec can utilize two models for selecting observations: either skipgram or \ac{CBOW}. 
             
-    
+            \subsection{Theoretical Implementation}
+            
+            \subsection{Practical Implementation}
+            Tf-Idf weighed USEM Word vectors
