--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -78,6 +78,23 @@
   file = {/Users/I518232/Zotero/storage/VCIPKW2Y/crisp-dm-still-most-popular.html}
 }
 
+@article{dataScienceProjectTypes,
+  title = {{{CRISP-DM Twenty Years Later}}: {{From Data Mining Processes}} to {{Data Science Trajectories}}},
+  shorttitle = {{{CRISP-DM Twenty Years Later}}},
+  author = {{Martinez-Plumed}, Fernando and {Contreras-Ochando}, Lidia and Ferri, Cesar and {Hernandez-Orallo}, Jose and Kull, Meelis and Lachiche, Nicolas and {Ramirez-Quintana}, Maria Jose and Flach, Peter},
+  year = {2021},
+  month = aug,
+  journal = {IEEE Transactions on Knowledge and Data Engineering},
+  volume = {33},
+  number = {8},
+  pages = {3048--3061},
+  issn = {1041-4347, 1558-2191, 2326-3865},
+  doi = {10.1109/TKDE.2019.2962680},
+  abstract = {CRISP-DM(CRoss-Industry Standard Process for Data Mining) has its origins in the second half of the nineties and is thus about two decades old. According to many surveys and user polls it is still the de facto standard for developing data mining and knowledge discovery projects. However, undoubtedly the field has moved on considerably in twenty years, with data science now the leading term being favoured over data mining. In this paper we investigate whether, and in what contexts, CRISP-DM is still fit for purpose for data science projects. We argue that if the project is goal-directed and process-driven the process model view still largely holds. On the other hand, when data science projects become more exploratory the paths that the project can take become more varied, and a more flexible model is called for. We suggest what the outlines of such a trajectory-based model might look like and how it can be used to categorise data science projects (goal-directed, exploratory or data management). We examine seven real-life exemplars where exploratory activities play an important role and compare them against 51 use cases extracted from the NIST Big Data Public Working Group. We anticipate this categorisation can help project planning in terms of time and cost characteristics.},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/3QPU4C26/Martinez-Plumed et al. - 2021 - CRISP-DM Twenty Years Later From Data Mining Proc.pdf}
+}
+
 @book{epsteinParsingTuringTest2008,
   title = {Parsing the Turing Test: Philosophical and Methodological Issues in the Quest for the Thinking Computer},
   shorttitle = {Parsing the Turing Test},
