--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -99,28 +99,28 @@
 %\include{Inhalt/04_Inhalt/quellcode}
 %\include{Inhalt/04_Inhalt/literaturHinweis}
 
-\include{Inhalt/04_Inhalt/introduction.tex}
-\include{Inhalt/04_Inhalt/Objectives and Criteria.tex}
-\include{Inhalt/04_Inhalt/fundamentals.tex}
+\include{Inhalt/04_Inhalt/introduction}
+\include{Inhalt/04_Inhalt/Objectives and Criteria}
+\include{Inhalt/04_Inhalt/fundamentals}
 
-\include{Inhalt/04_Inhalt/content_dataset_selection.tex}
-\include{Inhalt/04_Inhalt/content_business_understanding.tex}
-\include{Inhalt/04_Inhalt/content_data_understanding.tex}
-\include{Inhalt/04_Inhalt/content_data_preparation.tex}
-\include{Inhalt/04_Inhalt/content_modeling.tex}
-\include{Inhalt/04_Inhalt/content_evaluation.tex}
-\include{Inhalt/04_Inhalt/content_deployment.tex}
-
-
+\include{Inhalt/04_Inhalt/content_dataset_selection}
+\include{Inhalt/04_Inhalt/content_business_understanding}
+\include{Inhalt/04_Inhalt/content_data_understanding}
+\include{Inhalt/04_Inhalt/content_data_preparation}
+\include{Inhalt/04_Inhalt/content_modeling}
+\include{Inhalt/04_Inhalt/content_evaluation}
+\include{Inhalt/04_Inhalt/content_deployment}
 
 
 
 
-%\include{Inhalt/04_Inhalt/alternatives.tex}
+
+
+%\include{Inhalt/04_Inhalt/alternatives}
 %\include{Inhalt/04_Inhalt/theoretical.tex}
 %\include{Inhalt/04_Inhalt/practical.tex}
-\include{Inhalt/04_Inhalt/Evaluation.tex}
-\include{Inhalt/04_Inhalt/Outlook.tex}
+\include{Inhalt/04_Inhalt/Evaluation}
+\include{Inhalt/04_Inhalt/Outlook}
 % ---- Literaturverzeichnis
 \cleardoublepage
 \renewcommand*{\chapterpagestyle}{plain}
