--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -113,6 +113,14 @@
   howpublished = {https://www.sap.com/germany/about/company/history/1972-1980.html}
 }
 
+@misc{internalExternalData,
+  title = {3 {{Keys}} to {{Managing Data}} and {{Maximizing Business Intelligence}}},
+  author = {at Worthwhile (worthwhile.com), The Fine Folks},
+  abstract = {To maximize your company data and build real business intelligence solutions, you need to understand these 3 dichotomies of data.},
+  howpublished = {https://worthwhile.com/insights/2017/02/20/data-business-intelligence/},
+  file = {/Users/I518232/Zotero/storage/DTFJ394S/data-business-intelligence.html}
+}
+
 @misc{investopediaInvoices,
   title = {Understanding {{Invoices}}},
   journal = {Investopedia},
@@ -242,6 +250,17 @@
   abstract = {Can a solo developer follow a Scrum process? Google it, you'll get a few different answers. Here's mine.},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/X4YGSRA7/scrum-and-the-solo-dev-fb8e810ed42b.html}
+}
+
+@misc{srivastavaDataMining,
+  title = {Difference {{Between Data Science}} and {{Data Mining}}},
+  author = {Srivastava, Astitva},
+  year = {2020},
+  month = jul,
+  journal = {The Startup},
+  abstract = {Sometimes it might confusing to some people to distinguish between Data Science and Data Mining, so after reading this article it will\ldots},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/N2CZY6SV/difference-between-data-science-and-data-mining-37104b1c6a61.html}
 }
 
 @misc{structuredAndUnstructuredData,
