--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -3,6 +3,9 @@
 
 	\subparagraph{Clustering Algorithm} is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
 	\subparagraph{\ac{NLP}}is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
+	
+	\textcolor{red}{This is not yet completed.}
+	
 
 \section{Corporate Environment}
 
@@ -22,7 +25,3 @@
 	SAP SE has an executive board consisting of seven members, each attributed to one area. The \ac{AI} division falls into the responsibility of Jürgen Müller, Chief Technology Officer and leader of the board area for technology and innovation \cite{JuergenMuellerBiography}.
 	Members of the organizational unit for \ac{AI} are divided in different teams concerned with development, product success, operations and specific \ac{AI}-services. Development Teams are organized into \acp{CoE}, in which special expertise for designated areas is united.
 	SAP has a team of researchers around the world concerned with state-of-the-art topics, including few-shot learning, sentiment analysis, privacy and fairness \cite{AIOverviewResearch}. The research teams regularly publish articles on their advancements.
-	
-	\subsection{Technological}
-	https://www.sap.com/products/artificial-intelligence.html
-
