types of projects

--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -107,6 +107,12 @@
   keywords = {Artificial intelligence,Methodology,Philosophy}
 }
 
+@misc{externalData,
+  title = {Harnessing the Power of External Data | {{McKinsey}}},
+  howpublished = {https://www.mckinsey.com/business-functions/mckinsey-digital/our-insights/harnessing-the-power-of-external-data},
+  file = {/Users/I518232/Zotero/storage/QUMXN8XD/harnessing-the-power-of-external-data.html}
+}
+
 @misc{GeschichteSAP1972,
   title = {Geschichte Der {{SAP}}},
   journal = {Die Anfangsjahre 1072-1980},
@@ -287,6 +293,15 @@
   issn = {0026-4423},
   doi = {10.1093/mind/LIX.236.433},
   annotation = {\_eprint: https://academic.oup.com/mind/article-pdf/LIX/236/433/30123314/lix-236-433.pdf}
+}
+
+@misc{whyExternalData,
+  title = {Why External Data Should Be Part of Your Data Strategy},
+  journal = {MIT Sloan},
+  abstract = {Third-party data is out there to find and use. To make external data work for your firm, vet it carefully and make it part of a centralized data strategy.},
+  howpublished = {https://mitsloan.mit.edu/ideas-made-to-matter/why-external-data-should-be-part-your-data-strategy},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/2EIVF7K3/why-external-data-should-be-part-your-data-strategy.html}
 }
 
 @inproceedings{wirthCRISPDMStandardProcess2000,
