modelling include picture

--- a/Inhalt/04_Inhalt/content_modeling.tex
+++ b/Inhalt/04_Inhalt/content_modeling.tex
@@ -15,6 +15,15 @@ A distance measure is a quantification of how near objects in space are. Distanc
 \section{Clustering Algorithms}
 		
 		\subsection{K-Means with Euclidean Distance}
+		\subsection{DBSCAN}
+		
+		 \begin{figure}[ht]
+			\centering
+			\includegraphics[height=8cm]{Bilder/dbscan_plot.png}
+			\caption{DBSCAN hyperparameters and resulting number of clusters}
+			\label{fig:dbscan-plot}
+		\end{figure}
+		
 		\subsection{Machine Learning}
 		Already Alan Turing understood that for laymen a learning machine can be perceived as a paradox.  How can a machine learn, if a human has to define its behavior beforehand? There are three major subfields in the discipline of artificial intelligence that fundamentally explain how a computer can learn how to behave despite predefined behavior.
 		
