--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -11,6 +11,7 @@
 	\acro{CRISP-DM}{Cross Industry Standard Process for Data Mining}
 	\acro{CoE}{Center of Excellence}
 	\acrodefplural{CoE}{Centers of Excellence}
+	\acro{ERP}{Enterprise Resource Planning}
 	\acro{GIL}{Global Interpreter Lock}
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
