--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -1,4 +1,20 @@
 \chapter{Business Understanding}
-In \cite{CRISPDM2000}, different methods for business understanding are mentioned. Firstly, a 
+In \cite{CRISPDM2000}, different tasks, and outputs for developting a business understanding are mentioned. The task and respective output will be dicussed in the following sections.
 
-- why did i decide for clustering?
+\section{Determine Business Objectives}
+Businesses without existing an \ac{ERP} solution in place can easily be overwhelmed by the number of invoices reaching them daily. Even more, the controlling department can easily lose the overview of spending. To quickly gain a perspective on the most important spending topics, spending should be sorted in categories of similar nature.
+
+The primary goal is the development of a solution for automatic aggregation of documents, based on topics adressed in those documents. The focus is on shorter text segments, such as product descriptions. The business objective is an information gain, on how spending is distributed among cross-cutting topics in a company.
+
+The created solution can be evaluated with the business success criterion: "Does the solution identify and give useful insights in the money pits?". This judgement of having achieved the goal is a subjective matter. Evaluating the success should therefore be distributed among several stakeholders, including but not limited to the author, the supervisor and the supplier of the data.
+
+
+\section{Assess Situation}
+
+\subsection{Inventory of Resources}
+An \ref{tabelle:inventory} was created for assessing the situation. Most notably is the availability of experts through excellent intercorporational cooperation. Also, a large collection of datasets is available. Hardware platforms include personal machines as well as hosted environments with GPU capabilities. Available software are data science tools included in the Anaconda Navigator, such as Jupyter Notebook. All open-source libraries are of course also included.
+
+\section{Determine Data Mining Goals}
+
+
+\section{Produce Project Plan}
