--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -133,6 +133,6 @@
 \appendix
 %\clearpage
 %\pagenumbering{Roman}  % römische Seitenzahlen für Anhang
-
+\include{Inhalt/04_Inhalt/appendix}
 \newpage
 \end{document}
