business understanding continued

--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -13,7 +13,7 @@
                                & operational data           & 1 dataset                                                                         \\
     Computing resources        & hardware platforms         & \begin{tabular}[c]{@{}l@{}}1 machine \\ access to SAP AI Core\end{tabular} \\
     Software                   & data mining tools          & anaconda, jupyter                                                          \\
-                               & other relevant software    & Excel                                                                     
+                               & other relevant software    & Excel, Visual Studio Code, Git                                                                     
     \end{tabular}
     \label{tabelle:inventory}
     
