--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -4,7 +4,7 @@
 	\subparagraph{Clustering Algorithm} is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
 	\subparagraph{\ac{NLP}}is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
 	
-	\textcolor{red}{This is not yet completed.}
+	\textcolor{red}{This is not yet completed, as the glossary of terms will be expanded while writing the thesis.}
 	
 
 \section{Corporate Environment}
